# repo-sage

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY_NOW.md  Makefile  README.md  app.py  example_java_design_patterns.py  example_openrouter.py  examples_agent.py  examples_chunking.py  examples_evaluation.py  examples_logging.py  examples_search.py  main.py  pyproject.toml  setup_check.py  test_pipeline.py
docs/: HF_TOKEN_SETUP.md  LOGGING.md  search.md
src/repo_sage/: __init__.py  agent.py  evaluation.py  exceptions.py  github_reader.py  llm_helpers.py  log_analyzer.py  logging_system.py  search.py
src/repo_sage/chunking/: __init__.py  chunker.py  strategies.py
tests/: conftest.py  test_chunker.py  test_chunking_integration.py  test_exceptions.py  test_github_reader.py  test_integration.py  test_llm_helpers.py  test_logging.py  test_search.py  test_strategies.py
